# Dovi-ai-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: feature-agent.md  feedback-agent.md  fix-agent.md  pr-agent.md  review-agent.md  test-agent.md
.claude/hooks/: post-tool-use.sh  pre-tool-use.sh  stop.sh
.claude/rules/: architecture.md  security.md
.claude/skills/: commit.md  write-pr.md
.claude/skills/commit/: SKILL.md
.claude/skills/fix-bug/: SKILL.md
.claude/skills/handle-feedback/: SKILL.md
.claude/skills/implement-feature/: SKILL.md
.claude/skills/new-branch/: SKILL.md
.claude/skills/refactor-safely/: SKILL.md
.claude/skills/resolve-pr-comments/: SKILL.md
.claude/skills/review-local-diff/: SKILL.md
.claude/skills/write-pr/: SKILL.md
.claude/skills/write-test/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
app/: main.py
app/core/: config.py
app/llm/: client.py  output_parser.py
app/review/: context.py  diff.py  pipeline.py  result_filter.py  schema.py
scripts/: test_llm_client.py
tests/: test_context.py  test_diff.py  test_output_parser.py  test_result_filter.py  test_review_pipeline.py
